# CaisseNoire

./: Cargo.toml  Procfile
.github/workflows/: dev.yml
migrations/2019-08-20-160828_create_api_keys/: down.sql  up.sql
migrations/2019-09-20-150413_create_teams/: up.sql
migrations/2019-09-28-123225_create-users/: up.sql
migrations/2019-09-30-162119_create-sanctions/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: mod.rs  models.rs  routes.rs
src/database/: models.rs  postgres.rs  schema.rs
src/sanctions/: interface.rs  mod.rs  models.rs  postgres.rs  routes.rs  utils.rs
src/teams/: interface.rs  mod.rs  models.rs  postgres.rs  routes.rs
src/test_utils/: mod.rs  postgres.rs  routes.rs
src/users/: interface.rs  mod.rs  models.rs  postgres.rs  routes.rs
