[package]
name = "caisse_noire"
version = "0.1.0"
authors = ["Victor Domecq <vicdomecq@gmail.com>"]
edition = "2018"

[dependencies]
rouille = "3.0.0"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "serde_json", "chrono"] }
dotenv = "0.15.0"
uuid = {version="0.7.4", features = ["v4", "serde"]}
serde_json = "1.0"
diesel_as_jsonb = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.7"
r2d2-diesel = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
